--- a/src/app/main-page/main-page.component.html
+++ b/src/app/main-page/main-page.component.html
@@ -1,7 +1,7 @@
 <div fxLayout="column" fxLayoutAlign="center center" ngClass.lt-md="text-align-center">
   <div fxLayout="row" fxLayout.lt-md="column" fxLayoutAlign="center center">
     <div fxFlex="30" fxLayoutAlign="end center" fxLayoutAlign.lt-md="center center">
-      <img class="profile-image" src="assets/Allianz%20vor%20Hecke%20webformat.jpg" alt="Profile Image">
+      <img class="profile-image" src="assets/Allianz vor Hecke squareUpCloser.jpg" alt="Profile Image">
     </div>
     <div fxFlex="60" ngClass.sm="small-margin" ngClass.xs="small-margin--xs">
       <div fxFlex.lt-md="auto" fxFlex="70" fxLayout="column" fxLayoutAlign.lt-md="center center">
@@ -41,8 +41,7 @@
               <fa-icon class="link-icon-style-green" [icon]="twitter"></fa-icon>
               Twitter
             </a>
-            <a class="socials-links link-style-green text-black"
-               (mousedown)="goToPage($event, 'mailto:hannes.staerk@gmail.com')">
+            <a class="socials-links link-style-green text-black" href="mailto:hannes.staerk@gmail.com">
               <fa-icon class="link-icon-style-green" [icon]="mail"></fa-icon>
               hannes.staerk@gmail.com
             </a>
