--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -1,5 +1,3 @@
-
-
 //.mat-button {
 //  color: white;;
 //}
@@ -31,12 +29,23 @@
   color: white;
 }
 
-.example-icon {
+.icon {
+  transition-duration: 0.2s;
+  color: var(--color-primary);
+}
+
+.icon:hover {
+  transition-duration: 0.2s;
+  color: white;
+}
+
+.button-hover {
   font-size: 30px;
   transition-duration: 0.2s;
   color: var(--color-primary);
 }
-.example-icon:hover {
+
+.button-hover:hover {
   transition-duration: 0.2s;
   background-color: var(--color-primary);
   color: white;
