make links nice

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -15,26 +15,21 @@
   </div>
   <div fxHide.lt-md fxFlex="60">
     <div fxFlex="70" fxLayout="row" fxLayoutGap="10px" fxLayoutAlign="end center">
-      <button class="button-hover" mat-icon-button aria-label="Example icon-button with share icon">
-        <a href="https://github.com/HannesStark" target="_blank">
-          <fa-icon class="icon" [icon]="github"></fa-icon>
-        </a>
-      </button>
-      <button class="button-hover" mat-icon-button aria-label="icon-button icon">
-        <a href="https://www.linkedin.com/in/hannes-stark/" target="_blank">
-          <fa-icon class="icon" [icon]="linkedin"></fa-icon>
-        </a>
-      </button>
-      <button class="button-hover" mat-icon-button aria-label="icon-button icon">
-        <a href="https://twitter.com/HannesStaerk" target="_blank">
-          <fa-icon class="icon" [icon]="twitter"></fa-icon>
-        </a>
-      </button>
-      <button class="button-hover" mat-icon-button aria-label="icon-button icon">
-        <a href="mailto:hannes.staerk@gmail.com">
-          <fa-icon class="icon" [icon]="mail"></fa-icon>
-        </a>
-      </button>
+      <a href="https://github.com/HannesStark" target="_blank" class="button-hover" mat-icon-button
+         aria-label="Example icon-button with share icon">
+        <fa-icon [icon]="github"></fa-icon>
+      </a>
+      <a href="https://www.linkedin.com/in/hannes-stark/" target="_blank" class="button-hover" mat-icon-button
+         aria-label="icon-button icon">
+        <fa-icon [icon]="linkedin"></fa-icon>
+      </a>
+      <a href="https://twitter.com/HannesStaerk" target="_blank" class="button-hover" mat-icon-button
+         aria-label="icon-button icon">
+        <fa-icon [icon]="twitter"></fa-icon>
+      </a>
+      <a href="mailto:hannes.staerk@gmail.com" class="button-hover" mat-icon-button aria-label="icon-button icon">
+        <fa-icon [icon]="mail"></fa-icon>
+      </a>
     </div>
   </div>
   <div fxHide.gt-sm fxFlex="50" fxLayoutAlign="start center">
@@ -53,26 +48,21 @@
     </a>
   </div>
   <div fxHide.gt-sm fxFlex="50" fxLayout="row" fxLayoutGap.gt-xs="10px" fxLayoutAlign="end center">
-    <button class="button-hover" mat-icon-button aria-label="Example icon-button with share icon">
-      <a href="https://github.com/HannesStark" target="_blank">
-        <fa-icon class="icon" [icon]="github"></fa-icon>
+    <a href="https://github.com/HannesStark" target="_blank" class="button-hover" mat-icon-button
+         aria-label="Example icon-button with share icon">
+        <fa-icon [icon]="github"></fa-icon>
       </a>
-    </button>
-    <button class="button-hover" mat-icon-button aria-label="icon-button icon">
-      <a href="https://www.linkedin.com/in/hannes-stark/" target="_blank">
-        <fa-icon class="icon" [icon]="linkedin"></fa-icon>
+      <a href="https://www.linkedin.com/in/hannes-stark/" target="_blank" class="button-hover" mat-icon-button
+         aria-label="icon-button icon">
+        <fa-icon [icon]="linkedin"></fa-icon>
       </a>
-    </button>
-    <button class="button-hover" mat-icon-button aria-label="icon-button icon">
-      <a href="https://twitter.com/HannesStaerk" target="_blank">
-        <fa-icon class="icon" [icon]="twitter"></fa-icon>
+      <a href="https://twitter.com/HannesStaerk" target="_blank" class="button-hover" mat-icon-button
+         aria-label="icon-button icon">
+        <fa-icon [icon]="twitter"></fa-icon>
       </a>
-    </button>
-    <button class="button-hover" mat-icon-button aria-label="icon-button icon">
-      <a href="mailto:hannes.staerk@gmail.com">
-        <fa-icon class="icon" [icon]="mail"></fa-icon>
+      <a href="mailto:hannes.staerk@gmail.com" class="button-hover" mat-icon-button aria-label="icon-button icon">
+        <fa-icon [icon]="mail"></fa-icon>
       </a>
-    </button>
   </div>
 </mat-toolbar>
 <!--For when there are more buttons-->
