--- a/src/app/main-page/main-page.component.html
+++ b/src/app/main-page/main-page.component.html
@@ -104,7 +104,7 @@
               <div fxLayout="row">
                 <h3>
                   <a class="item-subtitle link-style-green" href="https://www.unibw.de/home-en" target="_blank">
-                    Bundeswehr Univsersity Munich</a></h3>
+                    Bundeswehr University Munich</a></h3>
               </div>
               <p class="item-date-loc">
                 <fa-icon class="icon-right-margin" [icon]="calendar"></fa-icon>
