start reviews section

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -2,7 +2,7 @@
   <div fxHide.lt-md fxFlex="30" fxLayoutAlign="end center">
     <button #tooltip="matTooltip" mat-button
             matTooltip="My personal information"
-            [routerLink]="" class="mat-button"
+            [routerLink]="['']" class="mat-button"
             (mousedown)="home($event)">
       Home
     </button>
