--- a/src/app/main-page/main-page.component.html
+++ b/src/app/main-page/main-page.component.html
@@ -367,6 +367,32 @@
             </div>
             <hr ngClass.gt-sm="separator" ngClass.lt-md="separator--small">
             <div class="item" fxLayout="column" fxLayoutAlign.lt-md="center center">
+              <a class="item-title"> Paper onSurvey Transformers</a>
+              <div fxLayout="row">
+                <h3>
+                  <a class="item-subtitle link-style-green" href="https://www.in.tum.de/daml/startseite/"
+                     target="_blank">
+                    Data Analytics and Machine Learning Group at TUM</a></h3>
+              </div>
+              <p class="item-date-loc">
+                <fa-icon class="icon-right-margin" [icon]="calendar"></fa-icon>
+                April 2020 - Sept 2020
+                <a fxHide.xs>
+                  <fa-icon class="icon-right-margin--left" [icon]="location"></fa-icon>
+                  Munich, Germany
+                </a>
+              </p>
+              <p class="item-content">Transformers are a machine learning method that is the state of the art for many
+                natural language processing tasks but are currently also finding a lot of success in other fields.
+                Check out the
+                <a href="/assets/transformer_survey.pdf" target="_blank" class="link-style-orange">paper
+                  <fa-icon class="link-icon-style-orange" [icon]="paper"></fa-icon>
+                </a>
+                that explains the architecture, its properties and the main applications in detail.
+              </p>
+            </div>
+            <hr ngClass.gt-sm="separator" ngClass.lt-md="separator--small">
+            <div class="item" fxLayout="column" fxLayoutAlign.lt-md="center center">
               <a class="item-title">Thinktank: Psychological counseling for students - App Coach PTBS</a>
               <div fxLayout="row">
                 <h3>
