--- a/src/app/reviews/reviews.component.html
+++ b/src/app/reviews/reviews.component.html
@@ -10,7 +10,7 @@
             Since I have no hobbies and watch hours of mathematics lectures every day, I get through quite a few.
             Here you can find my favorites and reviews about them plus
             info what previous knowledge is required
-            
+
             <br>
             opinion
           </p>
@@ -50,33 +50,58 @@
           <div class="text-area" fxFlex.lt-md="" fxFlex="70" fxLayout="column" fxLayoutAlign.lt-md="center center">
             <div class="item" fxLayout="column" fxLayoutAlign.lt-md="center center">
               <mat-card class="example-card">
-                <mat-card-header>
+                <mat-card-header (click)="collapsed=!collapsed">
                   <div mat-card-avatar class="example-header-image"></div>
                   <mat-card-title>Shiba Inu</mat-card-title>
                   <mat-card-subtitle>Dog Breed</mat-card-subtitle>
                 </mat-card-header>
-                <img mat-card-image src="https://material.angular.io/assets/img/examples/shiba2.jpg"
-                     alt="Photo of a Shiba Inu">
-                <mat-card-content>
+                <mat-card-content *ngIf="!collapsed">
                   <p>
                     The Shiba Inu is the smallest of the six original and distinct spitz breeds of dog from Japan.
                     A small, agile dog that copes very well with mountainous terrain, the Shiba Inu was originally
                     bred for hunting.
                   </p>
                 </mat-card-content>
+                <img mat-card-image src="https://material.angular.io/assets/img/examples/shiba2.jpg"
+                     alt="Photo of a Shiba Inu">
                 <mat-card-actions>
                   <button mat-button>LIKE</button>
                   <button mat-button>SHARE</button>
                 </mat-card-actions>
+
+
               </mat-card>
             </div>
             <hr ngClass.gt-sm="separator" ngClass.lt-md="separator--small">
             <div class="item" fxLayout="column" fxLayoutAlign.lt-md="center center">
-
+              <mat-expansion-panel hideToggle>
+                <mat-expansion-panel-header>
+                  <mat-panel-title>
+                    This is the expansion title
+                  </mat-panel-title>
+                  <mat-panel-description>
+                    This is a summary of the content
+                  </mat-panel-description>
+                </mat-expansion-panel-header>
+                <p>This is the primary content of the panel.</p>
+              </mat-expansion-panel>
             </div>
             <hr ngClass.gt-sm="separator" ngClass.lt-md="separator--small">
             <div class="item" fxLayout="column" fxLayoutAlign.lt-md="center center">
+              <mat-card>
+                <mat-card-header>
+                  <mat-card-title style="font-size: 20px;">My collapsible card title</mat-card-title>
+                </mat-card-header>
 
+                <mat-card-content *ngIf="!collapsed">
+                  <p>This is some example text.</p>
+                  <p>This text will disappear when you use the action button in the actions bar below.</p>
+                </mat-card-content>
+                <mat-card-actions>
+                  <button mat-button (click)="collapsed=true">Collapse text</button>
+                  <button mat-button (click)="collapsed=false">Uncollapse text</button>
+                </mat-card-actions>
+              </mat-card>
             </div>
           </div>
         </div>
